# cosmic-application-template

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  cosmic-bg-dbgsym_0.1.0_amd64.ddeb  cosmic-bg_0.1.0_amd64.buildinfo  cosmic-bg_0.1.0_amd64.changes  cosmic-bg_0.1.0_amd64.deb  create-project.py  justfile  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.system76.CosmicApplicationTemplate.Devel.json
data/: com.system76.CosmicApplicationTemplate.desktop  com.system76.CosmicApplicationTemplate.desktop.in.in  com.system76.CosmicApplicationTemplate.gschema.xml.in  com.system76.CosmicApplicationTemplate.metainfo.xml  com.system76.CosmicApplicationTemplate.metainfo.xml.in.in
data/resources/: resources.gresource.xml
debian/: changelog  control  copyright  rules
i18n/en/: cosmic_application_template.ftl
po/: POTFILES.in
src/: application.rs  config.rs  config.rs.in  main.rs  meson.build  window.rs
src/_components/: app_model.rs  application.rs  mod.rs  window.rs
src/components/: app.rs  example.rs
