[package]
name = "cosmic-application-template"
version = "0.1.0"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = ["wgpu", "default_system_font", "palette", "svg", "image", "tokio"] }
iced_native = { git = "https://github.com/iced-rs/iced" }
iced_style = { git = "https://github.com/iced-rs/iced" }
csscolorparser = "0.6.2"
palette = { version = "0.6.1", features = ["serializing"] }

log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.9"
futures = "0.3.21"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }
xdg = "2.4.0"
# Application i18n
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.3.0"
adw-user-colors-lib = { git = "https://github.com/pop-os/user-color-editor" }
